--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#0288D1</color>
     <color name="colorAccent">#8BC34A</color>
+    <color name="colorTransparent">#00FFFFFF</color>
+    <color name="colorAliceBlue">#00F0F8FF</color>
+
 
 </resources>
