--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,27 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-   <com.mnemonic.play.BoxView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_marginTop="8dp"
-           android:layout_marginBottom="64dp"
-           android:layout_marginLeft="8dp"
-           android:layout_marginRight="8dp"
-           app:square_color="@color/colorAccent"
-           app:row="4"
-           app:column="4"
-           android:layout_centerHorizontal="true"
-   />
+    <com.mnemonic.play.BoxView
+            android:id="@+id/boxView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="64dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            app:square_color="@color/colorAccent"
+            app:row="2"
+            app:column="2"
+            android:layout_centerHorizontal="true"
+    />
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/timerBtn"
+            android:layout_below="@+id/boxView"
+            android:layout_centerHorizontal="true"
+            style="@style/Widget.AppCompat.Button.Borderless"
+    />
 
 </RelativeLayout>
