--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorTransparent">#00FFFFFF</color>
     <color name="colorAliceBlue">#00F0F8FF</color>
     <color name="colorHighlighted">#558BC34A</color>
+    <color name="colorWhite">#FFFFFF</color>
 
 
 </resources>
